# Code-Skills

./: Analysis_Results.md  CHANGELOG.md  CONTRIBUTING.md  CodeHands_Review_v1.1.md  CodeHands_Risk_Register.md  CodeHands_Walkthrough.md  Implementation_Plan.md  LICENSE  README.md
.codehands/: config.yml  presets.yml
adapters/: .windsurfrules  AGENTS.md  CLAUDE.md  GEMINI.md  copilot-instructions.md
adapters/.cursor-plugin/: manifest.json
adapters/kiro/: manifest.json
agents/: architect.md  code-reviewer.md  performance-engineer.md  security-auditor.md  test-engineer.md
cli/: Cargo.toml
cli/src/: config.rs  detect.rs  main.rs  skill.rs
cli/src/commands/: audit.rs  detect.rs  init.rs  mod.rs  presets.rs  skills.rs  status.rs  validate.rs
commands/: audit.md  build.md  debug.md  plan.md  review.md  ship.md  spec.md  test.md
docs/: model-detection.md  platform-compatibility.md  skill-anatomy.md  skill-tiers.md
docs/migration/: from-agent-skills.md  from-superpowers.md
docs/setup/: claude-code.md  codex.md  cursor.md  gemini-cli.md  github-copilot.md  kiro.md  opencode.md  windsurf.md
references/: accessibility-checklist.md  owasp-agentic-top10.md  owasp-llm-top10.md  performance-checklist.md  security-checklist.md  testing-anti-patterns.md  testing-patterns.md
scripts/: model-detect.sh
skills/_template/: SKILL.md
skills/agent-security/: SKILL.md
skills/api-and-interface-design/: SKILL.md
skills/audit-and-governance/: SKILL.md
skills/brainstorming/: SKILL.md
tests/: cross-reference.test.sh  frontmatter.test.sh  skill-format.test.sh
(+28 files in other folders)
